# BadChess

./: .gitignore  CMakeLists.txt  Readme.md  gitignore.txt  main.cpp
src/game/: Board.cpp  Board.h  ChessGame.cpp  ChessGame.h  Mask.cpp  Mask.h  MoveMessage.h  Piece.cpp  Piece.h  bishop.cpp  bishop.h  board.cpp  board.h  chessgame.cpp  chessgame.h  chesspiecefactory.cpp  chesspiecefactory.h  emptyfield.cpp  emptyfield.h  knight.cpp  knight.h  mask.cpp  mask.h  movemessage.cpp  movemessage.h  piece.cpp  piece.h  queen.h  rook.cpp  rook.h
src/game/pieces/: bishop.cpp  bishop.h  emptyfield.cpp  emptyfield.h  king.cpp  king.h  knight.cpp  knight.h  pawn.cpp  pawn.h  queen.cpp  queen.h  rook.cpp  rook.h
src/utility/: Coordinates.cpp  Coordinates.h  Grid.hpp  Input.cpp  Input.h  coordinates.cpp  coordinates.h  grid.hpp  input.cpp  input.h
